# bake

./: .env.example  .gitignore  Cargo.toml  README.md  README.zh.md  bake_config.json  package.json
.cursor/rules/: project.md
api/src/: Cargo.toml
backend/: Cargo.toml  README.md  config.toml  config.toml.example
backend/common/src/: lib.rs  utils.rs
backend/config/: Cargo.toml
backend/config/examples/: config.toml  usage.rs
backend/config/src/: lib.rs
backend/domain/: Cargo.toml
backend/infrastructure/: Cargo.toml  README.md
backend/infrastructure/src/: database.rs  lib.rs  redis.rs
backend/modules/: Cargo.toml
backend/pkg/: Cargo.toml
backend/pkg/src/: installer.rs  lib.rs  resolver.rs
crates/.cursor/rules/: backend.md
crates/api/: Cargo.toml
crates/api/.cursor/rules/: api.md
crates/api/src/: main.rs
crates/business_modules/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: error.rs  types.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: lib.rs
crates/infrastructure/src/: database.rs  lib.rs  redis.rs
crates/platform_services/: Cargo.toml
crates/platform_services/src/: manager.rs
frontend/: .gitignore  BAKE_LOGIN_USAGE.md  ROUTER_IMPLEMENTATION.md  biome.json  package.json  postcss.config.mjs  rsbuild.config.ts  tsconfig.json
frontend/.cursor/rules/: frontend.md
frontend/src/: App.tsx  i18n-new.ts  i18n.ts  index.tsx  router.tsx
locales/: en.json  en.yml  zh-CN.yml  zh.json
proof/: config.html  index.html  server.js
user/: db.rs  handlers.rs  models.rs  routers.rs
(+18 files in other folders)
