[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.36", features = ["full"] }
# 错误处理
anyhow = "1.0"
thiserror = "2.0"
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
