[package]
name = "bake-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bake-api"
path = "src/main.rs"

[dependencies]
# 使用 workspace 依赖
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust-i18n = { workspace = true }

# 内部依赖
bake-common = { path = "../common" }
bake-config = { path = "../config" }
